--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/benjaminkitson/wordlnt/issues"
   },
-  "homepage": "https://github.com/benjaminkitson/wordlnt#readme"
+  "homepage": "https://github.com/benjaminkitson/wordlnt#readme",
+  "dependencies": {
+    "express": "^4.17.2",
+    "hbs": "^4.2.0",
+    "postman-request": "^2.88.1-postman.31"
+  }
 }
